# autotools-learning

./: .gitignore  Makefile.in  config.h.in  configure.ac
src/: Makefile.in  jupiter  main.c
